# sd-ppp

./: .gitignore  .nvmrc  LICENSE  NOTICE  __init__.py  changelog.md  install.py  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  readme.md  sponsors.html.json  sponsors.json  style.css  vite.config.mts
.cursor/rules/: antd.mdc  react.mdc  vite.mdc  vitest.mdc  zustand.mdc
.github/workflows/: publish.yml
comfy/: __init__.py  apis.py  nodes.py  photoshop_instance.py  photoshop_manager.py  sdppp.py
comfy/plugins/: sd-ppp.js  sd-ppp_PS.ccx
javascript/: sdppp-a1111.js  sdppp-comfy.js  sdppp-comfy2.js  sdppp-custom.js  sdppp-sd.js  sdppp-util.js  socket.io.js  unknown-test.html  unknown.js
javascript/entries/: a1111-entry.mjs  a1111-entry.mjs.LICENSE.txt  comfy-entry.js  comfy-entry.js.LICENSE.txt  comfy-entry.mjs  comfy-entry.mjs.LICENSE.txt
javascript/plugins/: sd-ppp_PS.ccx
photoshop/: README.md  package-lock.json  package.json  webpack.config.js
photoshop/plugin/: manifest.json
photoshop/src/: index.jsx  styles.css
plugins/: package.sh  sd-ppp_PS.ccx
plugins/photoshop/: index.html  index.js  librarys.js  manifest.json  preview.html  promote.html  run.js  sdppp.html  sdpppX.js  (+1 more)
scripts/: a1111_init.py  comfy_init.py  nodes.py  sd_init.py  update-vslaunchconfig-session-id.cjs
sdppp_python/: apis.py  comfy_nodes.py  comfy_nodes_legacy.py  data.py  instances.py  photoshop_instance.py  sd_data.py  sdppp.py
static/: sd-ppp2_PS.ccx  sd-ppp_PS.ccx
typescripts/: develop.md  tsconfig.base.json  tsconfig.json
(+197 files in other folders)
