[project]
name = "sd-ppp"
description = "!!Another custom node about Photoshop!! PPP means interoP with your PhotoshoP. You can get or send layers from/to your Photoshop. This custom node is easier to use."
version = "1.0.0"
license = "LICENSE"

[project.urls]
Repository = "https://github.com/zombieyang/sd-ppp"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "zombieyang"
DisplayName = "sd-ppp"
Icon = ""
