[project]
name = "sd-ppp"
description = "getting/sending picture from/to Photoshop with a simple connection. Make Photoshop become the workspace of your ComfyUI."
version = "1.9.12"
license = { file = "LICENSE" }

[project.urls]
Repository = "https://github.com/zombieyang/sd-ppp"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "zombieyang"
DisplayName = "sd-ppp"
Icon = ""
